# pluses2python

./: .gitignore  README.md
pluses/: CMakeLists.txt
pluses/src/: Add.cpp  Add.h  CMakeLists.txt  Object.cpp  Object.h  main.cpp
pluses/src/python_binding/: python_binding.cpp
pluses/src/utils/: CalcGini.cpp  CalcGini.h  Classes.h  Utils.cpp  Utils.h
pluses/tests/: CMakeLists.txt  test_foo.cpp  test_gini.cpp
python/: test.py
